--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -19,111 +19,11 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f8f9fc;
-    overflow-x: hidden;
-    width: 100vw; /* Full width of the viewport */
-    height: 100vh; /* Full height of the viewport */
     display: flex;
     flex-direction: column;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #2d2e83;
-    padding: 10px 20px;
-    color: white;
-    height: 80px;
-}
 
-header .logo {
-    height: auto;
-    max-height: 60px;
-    width: auto;
-    align-self: center;
-}
-
-header button {
-    background-color: var(--vidaPink);
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-right: 20px;
-    margin-left: auto;
-    transition: background-color 0.3s ease;
-}
-
-header button:hover {
-    background-color: #e03570;
-}
-
-header .profile {
-    display: flex;
-    align-items: center;
-}
-
-header .profile img {
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 40px;
-    padding: 20px 40px;
-    flex-grow: 1; /* Ensures the main section expands to fill available space */
-}
-
-main .bar-chart-container,
-main .metrics {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-    height: 100%;
-}
-
-main .bar-chart-container {
-    flex: 2;
-}
-
-main .metrics {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-main .circular-charts {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    gap: 40px;
-    justify-content: center;
-}
-
-button {
-    display: inline-block;
-    padding: 15px 30px;
-    background-color: var(--vidaBlue);
-    color: var(--vidaWhite);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
 
 button:hover {
     opacity: 0.9;
@@ -131,7 +31,6 @@ button:hover {
 
 .container {
     width: 100%; /* Full width */
-    min-height: 100%; /* Full height */
     display: flex;
     flex-direction: column;
     flex-grow: 1; /* Ensures container takes all available space */
@@ -183,7 +82,7 @@ button:hover {
   }
   
   body {
-    /* background-image: url('../images/pod-web-bg.png'); */
+    background-image: url('../images/pod-web-bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -246,7 +145,7 @@ button:hover {
   .back-to-dashboard-btn {
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: var(--vidaPink);
     color: white;
     border: none;
     border-radius: 5px;
