--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -2,7 +2,7 @@
     --darkPink: rgb(208, 45, 208);
     --vidaWhite: rgb(250, 250, 250);
     --vidaBackground: rgb(8, 7, 5);
-    --vidaPink: rgb(167, 0, 75);
+    --vidaPink: rgb(255, 0, 115);
     --vidaOrange: rgb(246, 165, 121);
     --vidaBlue: rgb(14, 202, 242);
     --vidaGray: rgb(108, 117, 125);
@@ -74,7 +74,7 @@ input::placeholder {
 /* Button styling */
 button {
     padding: 0.75rem;
-    background-color: var(--vidaPink);
+    background-color: var(--vidaPurple);
     color: var(--vidaWhite);
     border: none;
     border-radius: 8px;
