--- a/src/styles/event-form.css
+++ b/src/styles/event-form.css
@@ -2,10 +2,11 @@
   --darkPink: rgb(208, 45, 208);
   --vidaWhite: rgb(250, 250, 250);
   --vidaBackground: rgb(8, 7, 5);
-  --vidaPink: rgb(167, 0, 75);
+  --vidaPink: rgb(255, 0, 115);
   --vidaOrange: rgb(246, 165, 121);
   --vidaBlue: rgb(14, 202, 242);
   --vidaGray: rgb(108, 117, 125);
+  --vidaPurple: rgb(116, 47, 255);
 
 }
 
@@ -120,7 +121,7 @@ textarea {
 button {
   display: inline-block;
   padding: 15px 30px;
-  background-color: var(--vidaPink);
+  background-color: var(--vidaPurple);
   color: var(--vidaWhite);
   border: none;
   border-radius: 5px;
@@ -143,7 +144,7 @@ button:hover {
 
 .create-event-btn {
   float: right;
-  background-color: var(--vidaBlue);
+  background-color: var(--vidaPurple);
 }
 
 .create-event-btn:hover {
@@ -241,19 +242,23 @@ button:hover {
   right: 50px; /* Adjust positioning as needed */
 }
 
-/* Download Poster Button Styles */
 .download-poster-btn {
-  padding: 10px 20px;
-  background-color: var(--vidaBlue);
+  background-color: var(--vidaPurple);
   color: var(--vidaWhite);
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 20px; /* Add margin to create space */
 }
 
 .download-poster-btn:hover {
   background-color: #0ea6c2;
+}
+
+/* Return to Dashboard Button Styles */
+.return-to-dashboard-btn {
+  /* Existing styles... */
+  margin-left: 20px; /* Add margin to create space */
 }
 
